--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="https://dhruvroyale.github.io/Tic-Tac-Toe">Tic-Tac-Toe</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://dhruvroyale.github.io/Hangman">Hangman</a></li>
                         <li class="nav-item"><a class="nav-link" href="https://dhruvroyale.github.io/Tambola-Number-Generator">Tambola Generator</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://dhruvroyale.github.io/Heads-Up">Heads Up</a></li>
                     </ul>
                 </div>
             </div>
@@ -52,6 +53,9 @@
                 </div>
                 <div class="game" id="tambola" onclick="redirect()">
                     <span>Tambola Generator</span>
+                </div>
+                <div class="game" id="heads-up" onclick="redirect()">
+                    <span>Heads Up</span>
                 </div>
             </div>
         </div>
